--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch --env=jsdom"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "babel-jest": "^27.3.1",
+    "classnames": "^2.3.1",
+    "jest": "^27.3.1",
+    "jest-css-modules-transform": "^4.3.0",
     "next": "latest",
     "prop-types": "^15.7.2",
+    "random-string": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
